# total

./: .gitignore  .mockery.yaml  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
cmd/total/: main.go
contracts/: Cargo.toml  README.md
contracts/lmsr_market/: Cargo.toml
contracts/lmsr_market/src/: error.rs  lib.rs  lmsr.rs  storage.rs
contracts/market_factory/: Cargo.toml
contracts/market_factory/src/: lib.rs
internal/chart/: ascii.go
internal/config/: config.go
internal/database/: database.go
internal/database/migrations/: 00001_init.sql
internal/handler/: handler.go  market.go
internal/ipfs/: client.go
internal/lmsr/: calculator.go  calculator_test.go
internal/logger/: logger.go
internal/model/: market.go  market_test.go  metadata.go  metadata_test.go  model.go
internal/repository/: repository.go
internal/service/: cache.go  events.go  factory.go  market.go  market_test.go  service.go
internal/soroban/: client.go  contract.go  types.go
internal/stellar/: builder.go  client.go
internal/template/: template.go
internal/template/templates/: base.html  create.html  deploy.html  error.html  index.html  market.html  markets.html  oracle.html  outcome.html  quote.html  transaction.html
scripts/: deploy-prod.sh
